--- a/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+++ b/tasks/cf-syslog-drain-smoke-test-with-vars.yml
@@ -4,7 +4,7 @@ image_resource:
   source:
     repository: loggregator/base
 inputs:
-- name: cf-syslog-drain-release
+- name: loggregator-tools
 - name: vars-store
 params:
   CF_SYSTEM_DOMAIN:
@@ -28,7 +28,7 @@ run:
 
     export CF_PASSWORD=$(bosh int vars-store/$VARS_STORE_FILE --path /cf_admin_password)
 
-    cd cf-syslog-drain-release
+    cd loggregator-tools
     export GOPATH=$PWD
     export PATH=$GOPATH/bin:$PATH
 
@@ -58,6 +58,6 @@ run:
       trap restart EXIT
     fi
 
-    cd src/code.cloudfoundry.org/scalable-syslog/tools/smokes
+    cd smoke_tests
     ./push.sh
     ./hammer.sh
