--- a/pipelines/loggregator/coconut.yml
+++ b/pipelines/loggregator/coconut.yml
@@ -23,10 +23,10 @@ resources:
   source:
     uri: https://github.com/cloudfoundry/loggregator
     branch: develop
-- name: cf-syslog-drain-release
+- name: loggregator-tools
   type: git
   source:
-    uri: https://github.com/cloudfoundry/cf-syslog-drain-release
+    uri: https://github.com/cloudfoundry-incubator/loggregator-tools
 
 jobs:
 - name: restage-logspinners
@@ -148,7 +148,7 @@ jobs:
   serial: true
   plan:
   - get: loggregator-ci
-  - get: cf-syslog-drain-release
+  - get: loggregator-tools
   - get: 1h
     trigger: true
   - task: v2-drain
@@ -171,7 +171,7 @@ jobs:
   serial: true
   plan:
   - get: loggregator-ci
-  - get: cf-syslog-drain-release
+  - get: loggregator-tools
   - get: 1h
     trigger: true
   - task: v2-drain
