--- a/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+++ b/tasks/cf-syslog-drain-smoke-test-with-vars.yml
@@ -32,6 +32,8 @@ run:
     export GOPATH=$PWD
     export PATH=$GOPATH/bin:$PATH
 
+    go get ./...
+
     function teardown {
       set +e
       ./report.sh
