--- a/tasks/cf-syslog-drain-smoke-test.yml
+++ b/tasks/cf-syslog-drain-smoke-test.yml
@@ -30,7 +30,7 @@ run:
     export GOPATH=$PWD
     export PATH=$GOPATH/bin:$PATH
 
-    go get ./...
+    go get code.cloudfoundry.org/rfc5424
 
     function teardown {
       set +e
