Add missing resource to task
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -526,6 +526,7 @@ jobs:
         passed: ["latest-deploy"]
         resource: loggregator-latest
       - get: loggregator-ci
+      - get: loggregator-tools
     - do:
       - aggregate:
         - task: setup-release-elect
