--- a/tasks/cf-syslog-drain-smoke-test.yml
+++ b/tasks/cf-syslog-drain-smoke-test.yml
@@ -5,6 +5,7 @@ image_resource:
     repository: loggregator/base
 inputs:
 - name: loggregator-tools
+- name: deployments-loggregator
 params:
   CF_SYSTEM_DOMAIN:
   CF_USERNAME:
