Make cf-syslog-drain-smoke-test-with-vars.yml match cf-syslog-drain-smoke-test.yml
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/tasks/cf-syslog-drain-smoke-test-with-vars.yml
+++ b/tasks/cf-syslog-drain-smoke-test-with-vars.yml
@@ -11,8 +11,6 @@ params:
   CF_USERNAME:
   CF_SPACE:
   CF_ORG:
-  CYCLES: 10000
-  DELAY_US: 100
   DATADOG_API_KEY:
   DRAIN_VERSION:
   TEARDOWN: true
@@ -54,6 +52,15 @@ run:
       exit $exit_code
     }
 
+    function cleanup {
+      ./report.sh
+      if [ "$TEARDOWN" = "true" ]; then
+        ./teardown.sh
+      else
+        ./restart.sh
+      fi
+    }
+
     if [ "$TEARDOWN" = "true" ]; then
       trap teardown EXIT
     else
@@ -61,5 +68,26 @@ run:
     fi
 
     cd smoke_tests
+    echo "Flood Spinner"
+    export CYCLES=10000
+    export DELAY_US=2
+    export WAIT=60
     ./push.sh
     ./hammer.sh
+    cleanup
+
+    echo "Flow Spinner"
+    export CYCLES=1000
+    export DELAY_US=1000
+    export WAIT=60
+    ./push.sh
+    ./hammer.sh
+    cleanup
+
+    echo "Drip Spinner"
+    export CYCLES=1000
+    export DELAY_US=500000
+    export WAIT=600
+    ./push.sh
+    ./hammer.sh
+    # We'll let the trap report and teardown
