Write bench results to bench results directory
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/tasks/loggregator/benchmarks.yml
+++ b/tasks/loggregator/benchmarks.yml
@@ -6,6 +6,9 @@ image_resource:
 inputs:
 - name: deployments-loggregator
 - name: loggregator-ci
+- name: loggregator
+outputs:
+- name: loggregator-bench-results
 params:
   BBL_STATE_DIR: deployments-loggregator/gcp/coconut-bbl
 run:
