--- a/pipelines/loggregator/loggregator.yml
+++ b/pipelines/loggregator/loggregator.yml
@@ -83,9 +83,9 @@ resources:
 - name: loggregator-bench-results
   type: git
   source:
-    uri: git@github.com:cloudfoundry-incubator/loggregator-bench-results
+    uri: git@github.com:cloudfoundry-incubator/loggregator-bench-results.git
     branch: master
-    private_key: {{deployments-loggregator-key}}
+    private_key: {{cf-loggregator-oauth-bot-key}}
 
 jobs:
 - name: run-tests
