Remove use 4 azs for router ops file from coconut deploy

--- a/pipelines/loggregator/loggregator.yml
+++ b/pipelines/loggregator/loggregator.yml
@@ -329,7 +329,6 @@ jobs:
         args:
         - "-c"
         - |
-          cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
           cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
           cp cf-deployment/operations/scale-to-one-az.yml ops-files/
           cp cf-deployment/operations/bypass-cc-bridge.yml ops-files/
@@ -353,7 +352,7 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml use-4-azs-for-router.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml bypass-cc-bridge.yml dev-versions.yml"
+      OPS_FILES: "clients.yml scale-to-one-az.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml bypass-cc-bridge.yml dev-versions.yml"
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml"
   - put: deployments-loggregator-with-changes
     params:
