Remove references to missing ops file

--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -275,7 +275,6 @@ jobs:
               #!/bin/bash
               set -ex
 
-              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
@@ -288,7 +287,7 @@ jobs:
           SYSTEM_DOMAIN: release-elect.science.loggr.cf-app.com
           VARS_STORE_FILE: gcp/science/release-elect/deployment-vars.yml
           VARS_FILES: "gcp/science/release-elect/datadog-vars.yml gcp/science/release-elect/turbulence-vars.yml"
-          OPS_FILES: "clients.yml use-4-azs-for-router.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
+          OPS_FILES: "clients.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
       - task: deploy-cf-syslog-drain
         config:
           image_resource:
@@ -408,7 +407,6 @@ jobs:
               #!/bin/bash
               set -ex
 
-              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
               cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
@@ -433,7 +431,7 @@ jobs:
           SYSTEM_DOMAIN: latest.science.loggr.cf-app.com
           VARS_STORE_FILE: gcp/science/latest/deployment-vars.yml
           VARS_FILES: "gcp/science/latest/datadog-vars.yml gcp/science/latest/turbulence-vars.yml"
-          OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
+          OPS_FILES: "clients.yml loggregator-version.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
       - task: deploy-cf-syslog-drain
         config:
           image_resource:
