--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -177,7 +177,6 @@ jobs:
             ROUTER_COUNT=$(cat $SETTINGS_FILE | jq .ROUTER_COUNT --raw-output)
 
             cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
-            cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
             cp bbl-state/gcp/loggregator-capacity-planning/ops-files/*.yml ops-files/
 
             cat <<EOT >> ops-files/capacity-planning-config.yml
@@ -206,7 +205,7 @@ jobs:
         BBL_STATE_DIR: gcp/loggregator-capacity-planning
         SYSTEM_DOMAIN: loggregator-capacity-planning.cf-app.com
         VARS_STORE_FILE: gcp/loggregator-capacity-planning/deployment-vars.yml
-        OPS_FILES: "clients.yml use-4-azs-for-router.yml capacity-planning-config.yml instance-types.yml"
+        OPS_FILES: "clients.yml capacity-planning-config.yml instance-types.yml"
     - put: deployments-loggregator-with-changes
       params:
         repository: updated-vars-store
