--- a/pipelines/loggregator/playground.yml
+++ b/pipelines/loggregator/playground.yml
@@ -62,11 +62,6 @@ resources:
     location: America/Denver
     days: [Monday, Tuesday, Wednesday, Thursday, Friday]
 
-- name: slack-alert
-  type: slack-notification
-  source:
-    url: {{slack-bot-url}}
-
 jobs:
 - name: bbl-create
   public: false
@@ -194,7 +189,6 @@ jobs:
           cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
           cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
           cp cf-deployment/operations/experimental/disable-etcd.yml ops-files/
-          cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
           cp bbl-state/gcp/playground/ops-files/*.yml ops-files/
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -202,7 +196,7 @@ jobs:
       BBL_STATE_DIR: gcp/playground
       SYSTEM_DOMAIN: playground.loggr.cf-app.com
       VARS_STORE_FILE: gcp/playground/deployment-vars.yml
-      OPS_FILES: "scale-to-one-az.yml clients.yml use-4-azs-for-router.yml cf-versions.yml disable-etcd.yml enable-rlp.yml"
+      OPS_FILES: "scale-to-one-az.yml clients.yml cf-versions.yml disable-etcd.yml enable-rlp.yml"
   - task: cf-syslog-drain-deploy
     config:
       image_resource:
@@ -262,12 +256,6 @@ jobs:
     params:
       repository: updated-deployments-loggregator
       rebase: true
-  on_failure: &slack-failure-alert
-    put: slack-alert
-    params:
-      text: |
-        The `$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME` job has failed. Please resolve any issues. Check it out at:
-        $ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
 - name: cf-destroy
   serial_groups: ["deployment"]
@@ -290,11 +278,3 @@ jobs:
       params:
         BBL_STATE_DIR: gcp/playground
         DEPLOYMENT_NAME: cf-syslog-drain
-  on_failure: &slack-failure-alert
-    put: slack-alert
-    params:
-      text: |
-        The `$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME` job has failed. Please resolve any issues. Check it out at:
-        $ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
-
-
