--- a/pipelines/loggregator/science.yml
+++ b/pipelines/loggregator/science.yml
@@ -276,8 +276,6 @@ jobs:
               set -ex
 
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
-              cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
-              cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
               cp bbl-state/gcp/science/release-elect/ops-files/*.yml ops-files/
 
       - task: cf-deploy
@@ -287,7 +285,7 @@ jobs:
           SYSTEM_DOMAIN: release-elect.science.loggr.cf-app.com
           VARS_STORE_FILE: gcp/science/release-elect/deployment-vars.yml
           VARS_FILES: "gcp/science/release-elect/datadog-vars.yml gcp/science/release-elect/turbulence-vars.yml"
-          OPS_FILES: "clients.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
+          OPS_FILES: "clients.yml tcp-routing-gcp.yml turbulence-cf.yml"
       - task: deploy-cf-syslog-drain
         config:
           image_resource:
@@ -408,8 +406,6 @@ jobs:
               set -ex
 
               cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
-              cp cf-deployment/operations/experimental/enable-rlp.yml ops-files/
-              cp cf-deployment/operations/experimental/enable-loggregator-v2-diego.yml ops-files/
               cp bbl-state/gcp/science/latest/ops-files/*.yml ops-files/
 
               version=$(cat release/version)
@@ -431,7 +427,7 @@ jobs:
           SYSTEM_DOMAIN: latest.science.loggr.cf-app.com
           VARS_STORE_FILE: gcp/science/latest/deployment-vars.yml
           VARS_FILES: "gcp/science/latest/datadog-vars.yml gcp/science/latest/turbulence-vars.yml"
-          OPS_FILES: "clients.yml loggregator-version.yml tcp-routing-gcp.yml enable-rlp.yml turbulence-cf.yml enable-loggregator-v2-diego.yml"
+          OPS_FILES: "clients.yml loggregator-version.yml tcp-routing-gcp.yml turbulence-cf.yml"
       - task: deploy-cf-syslog-drain
         config:
           image_resource:
